[gd_scene load_steps=9 format=3 uid="uid://obdowkyhuata"]

[ext_resource type="Script" uid="uid://80p2m6518sk2" path="res://Level/MainMenu/main_menu.gd" id="1_pxs2o"]
[ext_resource type="Texture2D" uid="uid://d1tl1rlj3ng0o" path="res://Assets/MainMenuBG.png" id="2_gok5u"]
[ext_resource type="FontFile" uid="uid://c5xsflmfcdy25" path="res://Assets/SuperMario256.ttf" id="3_cpve0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3l0lf"]
texture = ExtResource("2_gok5u")
modulate_color = Color(0.47788018, 0.47788018, 0.47788, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pxs2o"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gok5u"]
bg_color = Color(0.61745477, 0.61745477, 0.6174547, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpve0"]
bg_color = Color(0.8346142, 0.83461434, 0.83461404, 0.99215686)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.20392157)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gok5u"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pxs2o")

[node name="Panel" type="Panel" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_3l0lf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -184.875
offset_top = 31.0
offset_right = 184.875
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 9

[node name="StartGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_pxs2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gok5u")
theme_override_styles/hover = SubResource("StyleBoxFlat_cpve0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gok5u")
text = "Start Game
"

[node name="Option" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_pxs2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gok5u")
theme_override_styles/hover = SubResource("StyleBoxFlat_cpve0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gok5u")
text = "Option
"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_pxs2o")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gok5u")
theme_override_styles/hover = SubResource("StyleBoxFlat_cpve0")
theme_override_styles/focus = SubResource("StyleBoxEmpty_gok5u")
text = "Exit
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -389.5
offset_top = 64.0
offset_right = 389.5
offset_bottom = 184.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 10
theme_override_fonts/font = ExtResource("3_cpve0")
theme_override_font_sizes/font_size = 90
text = "Furry Venture"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
